Import font awesome CSS in main.css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
       href="https://getbootstrap.com/docs/4.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.11.1/css/all.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <script type="text/javascript" src="./js/main.js"></script>
@@ -26,7 +25,7 @@
 
   <body>
     <!--Code modified from Tushar https://stackoverflow.com/a/51413876 -->
-    <div class="navbar navbar-expand-lg" id="photoCredit">
+    <div class="navbar navbar-expand-lg" id="navMenu">
       <a
         class="navbar-brand"
         href="#"
@@ -72,6 +71,7 @@
             top: 200px;"
           >
             <a
+              id="photoCreditIcon"
               class="nav-link"
               id="photoCreditInfo"
               role="button"
@@ -182,8 +182,7 @@
               <div class="row">
                 <div class="col-sm">
                   <a class="btn-cta-github" href="#"
-                    ><i class="fab fa-github-alt fa-2x"></i
-                  >
+                    ><i class="fab fa-github-alt fa-2x"></i>
                 </a>
                 </div>
                 <div class="col-sm">
@@ -219,8 +218,7 @@
               <div class="row">
                     <div class="col-sm">
                             <a class="btn-cta-github" href="#"
-                              ><i class="fab fa-github-alt fa-2x"></i
-                            >
+                              ><i class="fab fa-github-alt fa-2x"></i>
                           </a>
                           </div>
                           <div class="col-sm">
