Adjust quote icons

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
           <div class="box-left" data-aos="fade-right">
             <div class="speech-bubble-left">
               <i class="fa fa-quote-left" style="padding: 2%;"></i>
-              <p style="padding: 2%;">
+              <p style="padding: 4%;">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
                 enim ad minim veniam, quis nostrud exercitation ullamco laboris
@@ -301,7 +301,7 @@
                 nulla pariatur. Excepteur sint occaecat cupidatat non proident,
                 sunt in culpa qui officia deserunt mollit anim id est laborum.
               </p>
-              <i class="fa fa-quote-right" style="padding: 2%;"></i>
+              <i class="fa fa-quote-right" style="padding: 2%; position: relative; left: 90%;"></i>
             </div>
           </div>
 
@@ -310,7 +310,7 @@
           <div class="box-right" data-aos="fade-left">
             <div class="speech-bubble-right">
               <i class="fa fa-quote-left" style="padding: 2%;"></i>
-              <p style="padding: 2%;">
+              <p style="padding: 4%;">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
                 enim ad minim veniam, quis nostrud exercitation ullamco laboris
@@ -319,10 +319,7 @@
                 nulla pariatur. Excepteur sint occaecat cupidatat non proident,
                 sunt in culpa qui officia deserunt mollit anim id est laborum.
               </p>
-              <i
-                class="fa fa-quote-right"
-                style="padding: 2%; align-content: right;"
-              ></i>
+              <i class="fa fa-quote-right" style="padding: 2%; position: relative; left: 90%;"></i>
             </div>
           </div>
 
@@ -330,7 +327,7 @@
           <div class="box-left" data-aos="fade-right">
             <div class="speech-bubble-left">
               <i class="fa fa-quote-left" style="padding: 2%;"></i>
-              <p style="padding: 2%;">
+              <p style="padding: 4%;">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
                 enim ad minim veniam, quis nostrud exercitation ullamco laboris
@@ -339,7 +336,7 @@
                 nulla pariatur. Excepteur sint occaecat cupidatat non proident,
                 sunt in culpa qui officia deserunt mollit anim id est laborum.
               </p>
-              <i class="fa fa-quote-right" style="padding: 2%;"></i>
+              <i class="fa fa-quote-right" style="padding: 2%; position: relative; left: 90%;"></i>
             </div>
           </div>
         </div>
