Change contact form to vertical layout

--- a/index.html
+++ b/index.html
@@ -360,22 +360,19 @@
         class="card mx-auto"
         style="max-width: 70%; align-content: center; padding: 2%;"
       >
-        <div class="row no-gutters">
-          <div class="col-md-2" style="line-height: 50px;">
-            <i class="fa fa-map-marked-alt"></i> somewhere on Earth <br />
-            <i class="fa fa-phone-alt"></i> (999) 999-9999 <br />
-            <i class="fas fa-alarm-clock"></i> 09:00 - 17:00 <br />
-            <i class="fa fa-envelope"></i> username@server.com <br />
-          </div>
-          <div class="sep"></div>
-          <div class="col-md-8">
+        <div class="card-header">
+            <i class="fa fa-map-marked-alt fa-lg" style="color: teal;"></i>&nbsp; &nbsp; Earth <br />
+            <i class="fa fa-phone-alt fa-lg" style="color: teal;"></i>&nbsp; &nbsp; (999) 999-9999 <br />
+            <i class="fas fa-clock fa-lg" style="color: teal;"></i>&nbsp; &nbsp; 09:00 - 17:00 <br />
+            <i class="fa fa-envelope fa-lg" style="color: teal;"></i>&nbsp; &nbsp; username@server.com <br />
+        </div>
+
             <div class="card-body">
               <h5 class="card-title">Contact us [TODO: contact form fields]</h5>
             </div>
           </div>
-        </div>
-      </div>
     </section>
+
     <div style="background-color: white; height: 50px;"></div>
     <section id="footer">
       <div style="background-color: rgb(61, 108, 139); height: 150px;"></div>
