Normalize parallax opacity

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     </section>
     <!----->
 
-    <div class="parallax"></div>
+    <div class="parallax" style="opacity: 0.5;"></div>
 
     <!---Cards Section-->
 
@@ -274,7 +274,7 @@
       <div style="background-color: white; height:50px"></div>
     </section>
     <!----->
-    <div class="parallax"></div>
+    <div class="parallax" style="opacity: 0.5;"></div>
 
     <div class="parallax">
       <!---Carousel Section-->
@@ -344,7 +344,7 @@
     </div>
     <!----->
 
-    <div class="parallax"></div>
+    <div class="parallax" style="opacity: 0.5;"></div>
 
     <!---Contact Form Section-->
     <section id="contact">
