--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
       href="https://getbootstrap.com/docs/4.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.11.1/css/all.css">
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.11.1/css/all.css"
+    />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <script type="text/javascript" src="./js/main.js"></script>
   </head>
@@ -183,15 +186,17 @@
                 <div class="col-sm">
                   <a class="btn-cta-github" href="#"
                     ><i class="fab fa-github-alt fa-2x"></i>
-                </a>
+                  </a>
                 </div>
                 <div class="col-sm">
                   <a class="btn-cta-linkedin" href="#"
-                    ><i class="fab fa-linkedin-in fa-2x"></i></a>
+                    ><i class="fab fa-linkedin-in fa-2x"></i
+                  ></a>
                 </div>
                 <div class="col-sm">
                   <a class="btn-cta-twitter" href="#"
-                    ><i class="fab fa-twitter fa-2x"></i></a>
+                    ><i class="fab fa-twitter fa-2x"></i
+                  ></a>
                 </div>
               </div>
             </div>
@@ -216,19 +221,21 @@
           <div class="card-footer text-center" style="background-color: white;">
             <div class="container">
               <div class="row">
-                    <div class="col-sm">
-                            <a class="btn-cta-github" href="#"
-                              ><i class="fab fa-github-alt fa-2x"></i>
-                          </a>
-                          </div>
-                          <div class="col-sm">
-                            <a class="btn-cta-linkedin" href="#"
-                              ><i class="fab fa-linkedin-in fa-2x"></i></a>
-                          </div>
-                          <div class="col-sm">
-                            <a class="btn-cta-twitter" href="#"
-                              ><i class="fab fa-twitter fa-2x"></i></a>
-                          </div>
+                <div class="col-sm">
+                  <a class="btn-cta-github" href="#"
+                    ><i class="fab fa-github-alt fa-2x"></i>
+                  </a>
+                </div>
+                <div class="col-sm">
+                  <a class="btn-cta-linkedin" href="#"
+                    ><i class="fab fa-linkedin-in fa-2x"></i
+                  ></a>
+                </div>
+                <div class="col-sm">
+                  <a class="btn-cta-twitter" href="#"
+                    ><i class="fab fa-twitter fa-2x"></i
+                  ></a>
+                </div>
               </div>
             </div>
           </div>
@@ -251,20 +258,21 @@
           <div class="card-footer text-center" style="background-color: white;">
             <div class="container">
               <div class="row">
-                    <div class="col-sm">
-                            <a class="btn-cta-github" href="#"
-                              ><i class="fab fa-github-alt fa-2x"></i
-                            >
-                          </a>
-                          </div>
-                          <div class="col-sm">
-                            <a class="btn-cta-linkedin" href="#"
-                              ><i class="fab fa-linkedin-in fa-2x"></i></a>
-                          </div>
-                          <div class="col-sm">
-                            <a class="btn-cta-twitter" href="#"
-                              ><i class="fab fa-twitter fa-2x"></i></a>
-                          </div>
+                <div class="col-sm">
+                  <a class="btn-cta-github" href="#"
+                    ><i class="fab fa-github-alt fa-2x"></i>
+                  </a>
+                </div>
+                <div class="col-sm">
+                  <a class="btn-cta-linkedin" href="#"
+                    ><i class="fab fa-linkedin-in fa-2x"></i
+                  ></a>
+                </div>
+                <div class="col-sm">
+                  <a class="btn-cta-twitter" href="#"
+                    ><i class="fab fa-twitter fa-2x"></i
+                  ></a>
+                </div>
               </div>
             </div>
           </div>
@@ -301,7 +309,10 @@
                 nulla pariatur. Excepteur sint occaecat cupidatat non proident,
                 sunt in culpa qui officia deserunt mollit anim id est laborum.
               </p>
-              <i class="fa fa-quote-right" style="padding: 2%; position: relative; left: 90%;"></i>
+              <i
+                class="fa fa-quote-right"
+                style="padding: 2%; position: relative; left: 90%;"
+              ></i>
             </div>
           </div>
 
@@ -319,7 +330,10 @@
                 nulla pariatur. Excepteur sint occaecat cupidatat non proident,
                 sunt in culpa qui officia deserunt mollit anim id est laborum.
               </p>
-              <i class="fa fa-quote-right" style="padding: 2%; position: relative; left: 90%;"></i>
+              <i
+                class="fa fa-quote-right"
+                style="padding: 2%; position: relative; left: 90%;"
+              ></i>
             </div>
           </div>
 
@@ -336,7 +350,10 @@
                 nulla pariatur. Excepteur sint occaecat cupidatat non proident,
                 sunt in culpa qui officia deserunt mollit anim id est laborum.
               </p>
-              <i class="fa fa-quote-right" style="padding: 2%; position: relative; left: 90%;"></i>
+              <i
+                class="fa fa-quote-right"
+                style="padding: 2%; position: relative; left: 90%;"
+              ></i>
             </div>
           </div>
         </div>
@@ -361,16 +378,20 @@
         style="max-width: 70%; align-content: center; padding: 2%;"
       >
         <div class="card-header">
-            <i class="fa fa-map-marked-alt fa-lg" style="color: teal;"></i>&nbsp; &nbsp; Earth <br />
-            <i class="fa fa-phone-alt fa-lg" style="color: teal;"></i>&nbsp; &nbsp; (999) 999-9999 <br />
-            <i class="fas fa-clock fa-lg" style="color: teal;"></i>&nbsp; &nbsp; 09:00 - 17:00 <br />
-            <i class="fa fa-envelope fa-lg" style="color: teal;"></i>&nbsp; &nbsp; username@server.com <br />
+          <i class="fa fa-map-marked-alt fa-lg" style="color: teal;"></i>&nbsp;
+          &nbsp; Earth <br />
+          <i class="fa fa-phone-alt fa-lg" style="color: teal;"></i>&nbsp;
+          &nbsp; (999) 999-9999 <br />
+          <i class="fas fa-clock fa-lg" style="color: teal;"></i>&nbsp; &nbsp;
+          09:00 - 17:00 <br />
+          <i class="fa fa-envelope fa-lg" style="color: teal;"></i>&nbsp; &nbsp;
+          username@server.com <br />
         </div>
 
-            <div class="card-body">
-              <h5 class="card-title">Contact us [TODO: contact form fields]</h5>
-            </div>
-          </div>
+        <div class="card-body">
+          <h5 class="card-title">Contact us [TODO: contact form fields]</h5>
+        </div>
+      </div>
     </section>
 
     <div style="background-color: white; height: 50px;"></div>
