Center navbar with logo

--- a/index.html
+++ b/index.html
@@ -29,11 +29,6 @@
   <body>
     <!--Code modified from Tushar https://stackoverflow.com/a/51413876 -->
     <div class="navbar navbar-expand-lg" id="navMenu">
-      <a
-        class="navbar-brand"
-        href="#"
-        style="color: rgb(85, 85, 85); padding: 2%;"
-      ></a>
       <button
         class="navbar-toggler"
         type="button"
@@ -57,6 +52,10 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#team">Team</a>
+          </li>
+          <li class="nav-item">
+            <a class="navbar-brand" href="#" style="color: rgb(85, 85, 85); font-size: 32px;"
+              >[LOGO]</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#testimonials">Testimonials</a>
