--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Basic Template</title>
     <meta name="viewport" content="width=device-width; initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="./css/main.css" />
+    <link rel="stylesheet" type="text/css" href="./css/testimonial.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
