--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <ul>
           <li><a href="#about">About</a></li>
           <li><a href="#team">Team</a></li>
-          <li><a href="#testimonial">Testimonial</a></li>
+          <li><a href="#testimonials">Testimonial</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
