Change photo credit background color

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <ul>
           <li><a href="#about">About</a></li>
           <li><a href="#team">Team</a></li>
-          <li><a href="#testimonials">Testimonial</a></li>
+          <li><a href="#testimonials">Testimonials</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
@@ -68,7 +68,7 @@
           </a>
           <div
             class="dropdown-menu"
-            style="background-color: rgba(0, 0, 0, 0.747); border: none; position: absolute; left: 70%;"
+            style="background-color: rgb(0, 0, 0); border: none; position: absolute; left: 70%;"
             aria-labelledby="navbarDropdownMenuLink"
           >
             <a
