--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!--Navigation Menu-->
     <div id="main-wrapper">
       <div class="logo">
-        <a href="#"><img src="./imgs/logo.png" alt=""></a>
+        <a href="#"><img src="./imgs/logo.png" alt=""/></a>
       </div>
       <div class="main_nav">
         <ul>
@@ -44,11 +44,9 @@
       </div>
     </div>
 
-    <!--Code modified from Tushar https://stackoverflow.com/a/51413876 -->
+    <!-- Code modified from Tushar https://stackoverflow.com/a/51413876 -->
     <div class="navbar-collapse" id="photoCredit">
-      <ul
-        class="navbar-nav ml-auto"
-      >
+      <ul class="navbar-nav ml-auto">
         <li class="nav-item dropdown">
           <a
             id="photoCreditIcon"
@@ -104,7 +102,7 @@
         </li>
       </ul>
     </div>
-    <!----->
+    <!-- End of code modified from Tushar -->
 
     <div class="parallax"></div>
 
@@ -140,7 +138,7 @@
 
       <div style="background-color: white; height:50px"></div>
 
-      <div class="card-deck" style="padding: 2%;">
+      <div class="card-deck" style="padding: 2%; margin-left: 13px;">
         <!---first member-->
         <div class="card" data-aos="zoom-in">
           <img
