--- a/index.html
+++ b/index.html
@@ -158,17 +158,17 @@
             <div class="container">
               <div class="row">
                 <div class="col-sm">
-                  <a class="btn-cta-github" href="#"
+                  <a class="btn-cta-github" href="#team"
                     ><i class="fab fa-github-alt fa-2x"></i>
                   </a>
                 </div>
                 <div class="col-sm">
-                  <a class="btn-cta-linkedin" href="#"
+                  <a class="btn-cta-linkedin" href="#team"
                     ><i class="fab fa-linkedin-in fa-2x"></i
                   ></a>
                 </div>
                 <div class="col-sm">
-                  <a class="btn-cta-twitter" href="#"
+                  <a class="btn-cta-twitter" href="#team"
                     ><i class="fab fa-twitter fa-2x"></i
                   ></a>
                 </div>
@@ -196,17 +196,17 @@
             <div class="container">
               <div class="row">
                 <div class="col-sm">
-                  <a class="btn-cta-github" href="#"
+                  <a class="btn-cta-github" href="#team"
                     ><i class="fab fa-github-alt fa-2x"></i>
                   </a>
                 </div>
                 <div class="col-sm">
-                  <a class="btn-cta-linkedin" href="#"
+                  <a class="btn-cta-linkedin" href="#team"
                     ><i class="fab fa-linkedin-in fa-2x"></i
                   ></a>
                 </div>
                 <div class="col-sm">
-                  <a class="btn-cta-twitter" href="#"
+                  <a class="btn-cta-twitter" href="#team"
                     ><i class="fab fa-twitter fa-2x"></i
                   ></a>
                 </div>
@@ -233,17 +233,17 @@
             <div class="container">
               <div class="row">
                 <div class="col-sm">
-                  <a class="btn-cta-github" href="#"
+                  <a class="btn-cta-github" href="#team"
                     ><i class="fab fa-github-alt fa-2x"></i>
                   </a>
                 </div>
                 <div class="col-sm">
-                  <a class="btn-cta-linkedin" href="#"
+                  <a class="btn-cta-linkedin" href="#team"
                     ><i class="fab fa-linkedin-in fa-2x"></i
                   ></a>
                 </div>
                 <div class="col-sm">
-                  <a class="btn-cta-twitter" href="#"
+                  <a class="btn-cta-twitter" href="#team"
                     ><i class="fab fa-twitter fa-2x"></i
                   ></a>
                 </div>
