--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="./css/main.css" />
     <link rel="stylesheet" type="text/css" href="./css/navigation.css" />
     <link rel="stylesheet" type="text/css" href="./css/testimonial.css" />
+    <link rel="stylesheet" type="text/css" href="./css/contact.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -351,6 +352,7 @@
         class="card mx-auto"
         style="max-width: 70%; align-content: center; padding: 2%;"
       >
+        <!---contact info-->
         <div class="card-header">
           <i class="fa fa-map-marked-alt fa-lg" style="color: teal;"></i>&nbsp;
           &nbsp; Earth <br />
@@ -361,10 +363,85 @@
           <i class="fa fa-envelope fa-lg" style="color: teal;"></i>&nbsp; &nbsp;
           username@server.com <br />
         </div>
+        <!----->
 
+        <!---contact us form-->
         <div class="card-body">
-          <h5 class="card-title">Contact us [TODO: contact form fields]</h5>
+          <form>
+            <div class="form-row">
+              <div class="col-md-6 mb-6 p-2">
+                <input
+                  type="text"
+                  id="firstName"
+                  class="form-control"
+                  placeholder="First Name"
+                  required
+                />
+              </div>
+
+              <div class="col-md-6 mb-6 p-2">
+                <input
+                  type="text"
+                  id="lastName"
+                  class="form-control"
+                  placeholder="Last Name (optional)"
+                />
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="col-md-6 mb-6 p-2">
+                <input
+                  type="text"
+                  id="email"
+                  class="form-control"
+                  placeholder="E-mail"
+                  required
+                />
+              </div>
+
+              <div class="col-md-6 mb-6 p-2">
+                <input
+                  type="text"
+                  id="phone"
+                  class="form-control"
+                  placeholder="Phone (optional)"
+                />
+              </div>
+            </div>
+            <div class="col-md-12 mb-12 p-1">
+            <div class="md-form form-sm">
+              <input
+                type="text"
+                id="subject"
+                class="form-control"
+                placeholder="Subject"
+                required
+              />
+            </div>
+          </div>
+          <div class="col-md-12 mb-12 p-1">
+            <div class="md-form form-sm">
+              <textarea
+                type="text"
+                id="message"
+                class="md-textarea form-control"
+                placeholder="Your message"
+                required
+              ></textarea>
+            </div>
+          </div>
+          <div class="col-md-12 mb-12 p-1">
+            <button
+              type="submit"
+              class="btn btn-primary"
+              onclick="organizeMessage()"
+            >
+              Send
+            </button>
+          </div>
+          </form>
         </div>
+        <!---->
       </div>
     </section>
 
