--- a/index.html
+++ b/index.html
@@ -354,15 +354,30 @@
       >
         <!---contact info-->
         <div class="card-header">
+          <div class="container">
+          <div class="row">
+              <div class="col-sm">
           <i class="fa fa-map-marked-alt fa-lg" style="color: teal;"></i>&nbsp;
-          &nbsp; Earth <br />
-          <i class="fa fa-phone-alt fa-lg" style="color: teal;"></i>&nbsp;
-          &nbsp; (999) 999-9999 <br />
-          <i class="fas fa-clock fa-lg" style="color: teal;"></i>&nbsp; &nbsp;
-          09:00 - 17:00 <br />
-          <i class="fa fa-envelope fa-lg" style="color: teal;"></i>&nbsp; &nbsp;
-          username@server.com <br />
+          &nbsp; Earth 
+              </div>
+              <div class="col-sm">
+                  <i class="fa fa-phone-alt fa-lg" style="color: teal;"></i>&nbsp;
+                  &nbsp; (999) 999-9999
+          </div>
         </div>
+        <div class="row">
+            <div class="col-sm">
+                <i class="fa fa-envelope fa-lg" style="color: teal;"></i>&nbsp; &nbsp;
+                username@server.com
+            </div>
+
+            <div class="col-sm">
+          <i class="fas fa-clock fa-lg" style="color: teal;"></i>&nbsp; &nbsp;
+          09:00 - 17:00 
+        </div>
+          </div>
+        </div>
+      </div>
         <!----->
 
         <!---contact us form-->
@@ -434,6 +449,7 @@
             <button
               type="submit"
               class="btn btn-primary"
+              style="font-size: 18px;"
               onclick="organizeMessage()"
             >
               Send
