Change icon and button colours

--- a/index.html
+++ b/index.html
@@ -357,22 +357,22 @@
           <div class="container">
           <div class="row">
               <div class="col-sm">
-          <i class="fa fa-map-marked-alt fa-lg" style="color: teal;"></i>&nbsp;
+          <i class="fa fa-map-marked-alt fa-lg" style="color: steelblue;"></i>&nbsp;
           &nbsp; Earth 
               </div>
               <div class="col-sm">
-                  <i class="fa fa-phone-alt fa-lg" style="color: teal;"></i>&nbsp;
+                  <i class="fa fa-phone-alt fa-lg" style="color: steelblue;"></i>&nbsp;
                   &nbsp; (999) 999-9999
           </div>
         </div>
         <div class="row">
             <div class="col-sm">
-                <i class="fa fa-envelope fa-lg" style="color: teal;"></i>&nbsp; &nbsp;
+                <i class="fa fa-envelope fa-lg" style="color: steelblue;"></i>&nbsp; &nbsp;
                 username@server.com
             </div>
 
             <div class="col-sm">
-          <i class="fas fa-clock fa-lg" style="color: teal;"></i>&nbsp; &nbsp;
+          <i class="fas fa-clock fa-lg" style="color: steelblue;"></i>&nbsp; &nbsp;
           09:00 - 17:00 
         </div>
           </div>
@@ -449,7 +449,7 @@
             <button
               type="submit"
               class="btn btn-primary"
-              style="font-size: 18px;"
+              style="font-size: 18px; background-color: steelblue;"
               onclick="organizeMessage()"
             >
               Send
