Add local team icon

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <!---first member-->
         <div class="card" data-aos="zoom-in">
           <img
-            src="https://img.icons8.com/nolan/96/000000/businessman.png"
+            src="./imgs/icons8-businessman-96.png"
             class="card-img-top"
             alt="member one"
             style="width: 96px;  align-self: center;"
@@ -183,7 +183,7 @@
         <!---second member-->
         <div class="card" data-aos="zoom-in">
           <img
-            src="https://img.icons8.com/nolan/96/000000/businessman.png"
+            src="./imgs/icons8-businessman-96.png"
             class="card-img-top"
             alt="member two"
             style="width: 96px;  align-self: center;"
@@ -220,7 +220,7 @@
         <!---third member-->
         <div class="card" data-aos="zoom-in">
           <img
-            src="https://img.icons8.com/nolan/96/000000/businessman.png"
+            src="./imgs/icons8-businessman-96.png"
             class="card-img-top"
             alt="member three"
             style="width: 96px;  align-self: center;"
